tests/errors/e_exestmtinexttype.pyx
cdef class Spam:
	answer = 42
_ERRORS = u"""
/Local/Projects/D/Pyrex/Source/Tests/Errors2/e_exestmtinexttype.pyx:2:1: Executable statement not allowed here
"""
